# API-WebSocket-Webhook

./: README.md  pyproject.toml
graphql_example/: crud.py  database.py  main.py  models.py  schema.py  sql_app.db
grpc_example/: readme.md
grpc_example/client/: calculator_client.py  calculator_pb2.py
grpc_example/proto/: calculator.proto  calculator_pb2_grpc.py
grpc_example/server/: calculator_server.py
rest_example/: crud.py  database.py  main.py  models.py  schemas.py  sql_app.db
xmlrpc_example/: client.py  server.py
