[tool.poetry]
name = "api-talk"
version = "0.1.0"
description = ""
authors = ["debakarr <debakar.roy@intel.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.37.1"
grpcio-tools = "^1.37.1"
grpcio-reflection = "^1.37.1"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.15"
graphene = "^2.1.8"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

